RetailDevGit/src/objects/ARM_Retail_Function__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object.
        This object stores the data for various retail functions used in salesforce bolt community cloud</description>
    <fields>
        <fullName>Display_Franchise_title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Franchise Title ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Franchise_title__c</fullName>
        <label>Franchise Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoBackgroundColor__c</fullName>
        <description>Define the background color for logo on header banner in your site</description>
        <inlineHelpText>CSS Legal Color Values are supported such as:
#ff0000 OR
rgb(255, 0, 0);   OR
rgba(255, 0, 0, 0.3);   OR
hsl(120, 100%, 50%);  OR
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Logo Background Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NavLinkColor__c</fullName>
        <inlineHelpText>CSS Legal Color Values are supported such as: 
#ff0000 OR 
rgb(255, 0, 0); OR 
rgba(255, 0, 0, 0.3); OR 
hsl(120, 100%, 50%); OR 
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Navigation Link Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NavLinkFontSize__c</fullName>
        <inlineHelpText>CSS units such as em, ex, %, px, cm, mm, in, pt, pc supported</inlineHelpText>
        <label>Navigation Link Font Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NavigationBackgroundColor__c</fullName>
        <description>Define the background color of your navigation in your site</description>
        <inlineHelpText>CSS Legal Color Values are supported such as: 
#ff0000 OR 
rgb(255, 0, 0); OR 
rgba(255, 0, 0, 0.3); OR 
hsl(120, 100%, 50%); OR 
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Navigation Background Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedNavBackgroundColor__c</fullName>
        <inlineHelpText>CSS Legal Color Values are supported such as: 
#ff0000 OR 
rgb(255, 0, 0); OR 
rgba(255, 0, 0, 0.3); OR 
hsl(120, 100%, 50%); OR 
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Selected Navigation Background Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedNavFontColor__c</fullName>
        <inlineHelpText>CSS Legal Color Values are supported such as: 
#ff0000 OR 
rgb(255, 0, 0); OR 
rgba(255, 0, 0, 0.3); OR 
hsl(120, 100%, 50%); OR 
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Selected Navigation Font Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubNavFontColor__c</fullName>
        <inlineHelpText>CSS Legal Color Values are supported such as: 
#ff0000 OR 
rgb(255, 0, 0); OR 
rgba(255, 0, 0, 0.3); OR 
hsl(120, 100%, 50%); OR 
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Sub Navigation Font Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubNavFontSize__c</fullName>
        <inlineHelpText>CSS units such as em, ex, %, px, cm, mm, in, pt, pc supported</inlineHelpText>
        <label>Sub Navigation Font Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubNavigationBackgroundColor__c</fullName>
        <description>Defines the background color of sub navigation</description>
        <inlineHelpText>CSS Legal Color Values are supported such as: 
#ff0000 OR 
rgb(255, 0, 0); OR 
rgba(255, 0, 0, 0.3); OR 
hsl(120, 100%, 50%); OR 
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Sub Navigation Background Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WelcomeTextColor__c</fullName>
        <inlineHelpText>CSS Legal Color Values are supported such as: 
#ff0000 OR 
rgb(255, 0, 0); OR 
rgba(255, 0, 0, 0.3); OR 
hsl(120, 100%, 50%); OR 
hsla(120, 100%, 50%, 0.3);</inlineHelpText>
        <label>Welcome Text Font Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Retail Function</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Retail Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>